--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "poke-angular",
   "version": "0.0.0",
+  "homepage": "https://oscarhinjoslopez.github.io/PokeAngular/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:poke-angular": "node dist/poke-angular/server/server.mjs"
+    "serve:ssr:poke-angular": "node dist/poke-angular/server/server.mjs",
+    "deploy" : "npm run build && gh-pages -d dist/poke-angular"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +26,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
     "express": "^4.18.2",
+    "gh-pages": "^6.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
